# Shop-God

./: .gitignore
api/: Cargo.toml
api/src/db/: Cargo.toml  models.rs
api/src/db/src/: connection.rs  lib.rs  models.rs  repository.rs
api/src/db/src/queries/: users.rs
api/src/domain/: Cargo.toml
api/src/domain/src/: errors.rs  lib.rs  repositories.rs
api/src/domain/src/users/: errors.rs  models.rs
api/src/handlers/: Cargo.toml
api/src/handlers/src/users/: regiser.rs  responses.rs
frontend/: package-lock.json  package.json
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/_directives/: mustmatch.directive.ts
frontend/src/app/_model/: entity.model.ts  user.model.ts
frontend/src/app/_service/: admin.service.ts
frontend/src/app/add-entity/: add-entity.component.html  add-entity.component.ts
frontend/src/app/adduser/: adduser.component.html  adduser.component.ts
frontend/src/environments/: environment.ts
old/: README.md
old/shop/: Cargo.toml
old/shop/src/: main.rs
proto/: AdminServiceClientPb.ts  admin_pb.d.ts  admin_pb.js
shop/: Cargo.toml
shop/proto/: admin.proto
shop/src/: client.rs  main.rs  server.rs
