[package]
name = "shop"
version = "0.1.0"
authors = ["Joshua Benz <joshua@planethull.com>"]
edition = "2018"
[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.110"
mongodb = "0.10.0"
bson = "0.14.1"
log = "0.4"
pretty_env_logger = "0.4"
